--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^11.11.17",
     "html2canvas": "^1.4.1",
     "iconv-lite": "^0.6.3",
+    "jspdf": "^3.0.0",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
