--- a/.env
+++ b/.env
@@ -3,11 +3,13 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+# Connect to Supabase via connection pooling.
+DATABASE_URL="postgresql://postgres.ddzxvjujhzjloayhtjdz:Mbga1243&@aws-0-eu-west-3.pooler.supabase.com:6543/postgres?pgbouncer=true"
 
-DATABASE_URL=postgresql://postgres.ghtrlytgsemwwbbbfscx:Mbga1243&@aws-0-eu-west-2.pooler.supabase.com:5432/postgres
+# Direct connection to the database. Used for migrations.
+DIRECT_URL="postgresql://postgres.ddzxvjujhzjloayhtjdz:Mbga1243&@aws-0-eu-west-3.pooler.supabase.com:5432/postgres"
 
 NEXTAUTH_SECRET=secret
 
-
-
+CRON_SECRET="PuzzleMbga1243&"
 
