--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,14 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript"],
-  "rules": { "react/no-unescaped-entities": 0 }
-}
+  "rules": {
+    "react/no-unescaped-entities": 0 ,
+      "@typescript-eslint/no-unused-vars": [
+        "error",
+        { 
+          "argsIgnorePattern": "^_",
+          "varsIgnorePattern": "^_",
+          "caughtErrorsIgnorePattern": "^_"
+        }
+      ]
+    }
+  }
