--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,4 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript"],
-  "rules": {
-    "react/no-unescaped-entities": 0 ,
-      "@typescript-eslint/no-unused-vars": [
-        "error",
-        { 
-          "argsIgnorePattern": "^_",
-          "varsIgnorePattern": "^_",
-          "caughtErrorsIgnorePattern": "^_"
-        }
-      ]
-    }
-  }
+  "rules": { "react/no-unescaped-entities": 0 }
+}
