--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,14 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript"],
-  "rules": { "react/no-unescaped-entities": 0 }
+    "rules": {
+      "@typescript-eslint/no-unused-vars": [
+        "warn",
+        { 
+          "argsIgnorePattern": "^_",
+          "varsIgnorePattern": "^_",
+          "caughtErrorsIgnorePattern": "^_"
+        }
+      ],
+      "@typescript-eslint/no-explicit-any": "error"
+    }
 }
