--- a/.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml
@@ -1,19 +1,17 @@
-# .github/workflows/keepalive.yml
-name: Database Keepalive
+name: Supabase Keepalive
 
 on:
   schedule:
-    - cron: '0 */5 * * *'  # Every 5 hours (more reliable than 5 days)
-  workflow_dispatch:       # Allows manual triggers
+    - cron: '0 */6 * * *'  # Every 6 hours (more reliable)
+  workflow_dispatch:
 
 jobs:
   ping:
     runs-on: ubuntu-latest
     steps:
-      - name: Ping Supabase
+      - name: Ping Supabase Database
         run: |
-          curl -s -X GET \
-          curl -X GET "${{ Secrets.APP_URL }}/api/keepalive" \
-          -H "Authorization: Bearer ${{ Secrets.CRON_SECRET }}"
-    permissions:
-      contents: read  # Read access to the repository contents
+          curl -X POST "https://${{ secrets.SUPABASE_PROJECT_REF }}.supabase.co/rest/v1/rpc/ping" \
+          -H "apikey: ${{ secrets.SUPABASE_ANON_KEY }}" \
+          -H "Content-Type: application/json" \
+          -d '{}'
